# STAGE-ISM

./: .gitignore  CLAUDE.md  README.md
HelloWorld/: helloworld.py
apidog/: README.md  cra_mock_api.postman_collection.json  environment.json  environment.postman.json  openapi.json  openapi_live.json
apidog/scenarios/: e2e_test_plan.md  edge_cases.md  real_world_flow.md
apidog/scripts/: fetch_openapi.py  make_fixtures.py  start_server.bat  start_server.ps1
mcp_server/: get_status_core.py  schemas.py  server.py  submit_expenses_core.py
mcp_server/tests/: test_e2e.py  test_get_status.py  test_robustness.py  test_unit.py
mock-api/: .env.example  .gitignore  README.md  portalite_session.py  pyproject.toml
mock-api/app/: auth.py  config.py  db.py  enums.py  files.py  main.py  models.py  schemas.py  seed.py
mock-api/app/routers/: auth.py  cra.py  cra_tracking.py  expenses.py
mock-api/docs/: API.md  WALKTHROUGH.md
mock-api/tests/: _helpers.py  conftest.py
mock-api/tests/edge_cases/: test_conflicts.py  test_files.py  test_jwt.py  test_validation.py
mock-api/tests/scenarios/: test_real_world.py
mock-api/tests/unit/: test_auth.py  test_cra.py  test_expenses.py  test_meta.py  test_seed.py  test_tracking.py
pingping_API/: REST_API.drawio  main.py  pyproject.toml
test_project/: main.py  pyproject.toml  server.py
