[project]
name = "cra-mock-api"
version = "0.1.0"
description = "Simplified FastAPI mock backend simulating the Cooptalite CRA, My Expenses and My CRA Tracking pages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "freezegun>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:jose.*",
    "ignore::DeprecationWarning:sqlalchemy.*",
]
